--- a/Test/app/src/main/res/values/strings.xml
+++ b/Test/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Test</string>
     <string name="button">Enter the name of the locality whose weather is of interest to you and click here</string>
+    <string name="next">Next</string>
+    <string name="welcome">Welcome to the weather app</string>
 </resources>
